--- a/css/style.scss
+++ b/css/style.scss
@@ -7,3 +7,58 @@ Author URI:     http://mekosh.org/
 Version:        1.0
 */
 
+@import 'reset';
+
+
+
+/* lifted from https://css-tricks.com/box-sizing/ */
+html {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box; 
+}
+
+*, *:before, *:after {
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit;
+}
+
+
+
+html {
+	font-size: 1.25rem;
+}
+
+body {
+	background-color: #fcfcfc;
+	font-family: Helvetica, serif;
+	color: #333;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	font-weight: bold;
+	margin-bottom: 1rem;
+}
+
+b, strong { font-weight: bold; }
+i, em { font-style: italic; }
+
+b i, b em, strong i, strong em, i b, i strong, em b, em strong {
+	font-style: italic;
+	font-weight: bold;
+}
+
+img {
+	display: block;
+}
+
+dl, ol, ul, p {
+	line-height: 135%;
+	margin-bottom: 1rem;
+}
+
+ul > li {
+	line-height: 135%;
+	margin-bottom: .5rem;
+}
