--- a/css/style.scss
+++ b/css/style.scss
@@ -7,58 +7,50 @@ Author URI:     http://mekosh.org/
 Version:        1.0
 */
 
-@import 'reset';
+@import 'html5reset';
+@import 'colors';
 
 
 
-/* lifted from https://css-tricks.com/box-sizing/ */
-html {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box; 
-}
+html { font-size: 1.125rem; /* ~18px */ }
 
-*, *:before, *:after {
-  -webkit-box-sizing: inherit;
-  -moz-box-sizing: inherit;
-  box-sizing: inherit;
-}
-
-
-
-html {
-	font-size: 1.25rem;
-}
+body, select, input, textarea { color: $offblack; }
 
 body {
-	background-color: #fcfcfc;
-	font-family: Helvetica, serif;
-	color: #333;
+	background-color: $bodybg;
+	font-family: sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6 {
-	font-weight: bold;
-	margin-bottom: 1rem;
-}
+a { color: $highlight; }
+a:hover { color: $primary; cursor: pointer; }
 
-b, strong { font-weight: bold; }
-i, em { font-style: italic; }
+/* Custom text-selection colors (remove any text shadows: http://twitter.com/miketaylr/status/12228805301) */
+::-moz-selection { background: $highlight; color: $offwhite; text-shadow: none; }
+::selection      { background: $highlight; color: $offwhite; text-shadow: none; }
 
-b i, b em, strong i, strong em, i b, i strong, em b, em strong {
-	font-style: italic;
-	font-weight: bold;
-}
+/*	j.mp/webkit-tap-highlight-color */
+a:link { -webkit-tap-highlight-color: $highlight; }
+
+ins { background-color: $highlight; color: $offblack; text-decoration: none; }
+mark { background-color: $highlight; color: $offblack; font-style: italic; font-weight: bold; }
+
+/* Mozilla dosen't style placeholders by default */
+input:-moz-placeholder    { color: $pink; }
+textarea:-moz-placeholder { color: $pink; }
+
+/* let's give blockquotes *some* default styling, because unstyled blockquotes are dangerous */
+blockquote { padding: 1em; background: $bodybg; }
+
+
 
 img {
 	display: block;
+	height: auto;
+	width: 100%;
 }
 
-dl, ol, ul, p {
-	line-height: 135%;
-	margin-bottom: 1rem;
-}
-
-ul > li {
-	line-height: 135%;
-	margin-bottom: .5rem;
+.wp-caption {
+	height: auto;
+	max-width: 100%;
+	width: 100% !important;
 }
